attempted to fix safari stretching

--- a/assets/css/social_page_resp.css
+++ b/assets/css/social_page_resp.css
@@ -45,6 +45,7 @@
   .header-img img {
     flex: 0 0 50%;
     min-width: 60vw;
+    height: auto;
     z-index: 5;
     margin-left: 0;
   }
@@ -133,6 +134,7 @@
   .header-img img {
     flex: 0 0 50%;
     min-width: 50vw;
+    height: auto;
     margin-left: 0;
     z-index: 5;
   }
@@ -200,6 +202,7 @@
     .header-img img {
       flex: 0 0 50%;
       min-width: 20vw;
+      height: auto;
       margin-left: 0;
       z-index: 5;
     }
@@ -250,6 +253,7 @@
    .header-img img {
      flex: 0 0 50%;
      max-width: 25vw;
+     height: auto;
      margin-left: 0;
      z-index: 5;
    }
