--- a/assets/css/social_page_style.css
+++ b/assets/css/social_page_style.css
@@ -68,7 +68,8 @@ html, body {
   transition: 0.3s ease;
 }
 .content .socials ul a:hover {
-  transform: scale(1.1);
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
   color: #fff;
   border-color: #fff;
 }
@@ -80,11 +81,13 @@ html, body {
 }
 .header-img img {
   max-width: 45%;
+  height: auto;
   margin-left: 10%;
 }
 .header-img p {
   width: 30%;
-  transform: translateY(0px);
+  -webkit-transform: translateY(0px);
+          transform: translateY(0px);
   -webkit-animation: float 5s ease-in-out infinite;
           animation: float 5s ease-in-out infinite;
   /* mix-blend-mode: multiply; */
@@ -103,7 +106,8 @@ html, body {
   top: 10%;
 }
 .header-img p:after {
-  transform: translatey(0px);
+  -webkit-transform: translateY(0px);
+          transform: translateY(0px);
   -webkit-animation: float2 5s ease-in-out infinite;
           animation: float2 5s ease-in-out infinite;
   content: ".";
@@ -126,13 +130,13 @@ html, body {
 }
 @-webkit-keyframes float {
   0% {
-    transform: translatey(0px);
+    -webkit-transform: translatey(0px);
   }
   50% {
-    transform: translatey(-20px);
+    -webkit-transform: translatey(-20px);
   }
   100% {
-    transform: translatey(0px);
+    -webkit-transform: translatey(0px);
   }
 }
 
@@ -150,17 +154,17 @@ html, body {
 @-webkit-keyframes float2 {
   0% {
     line-height: 30px;
-    transform: translatey(0px);
+    -webkit-transform: translatey(0px);
   }
   55% {
-    transform: translatey(-20px);
+    -webkit-transform: translatey(-20px);
   }
   60% {
     line-height: 10px;
   }
   100% {
     line-height: 30px;
-    transform: translatey(0px);
+    -webkit-transform: translatey(0px);
   }
 }
 @keyframes float2 {
